examples/type_system/failing/124_lambda_missing_close_paren.flx
let add = \(x, y -> x + y
let after = 3
